--- a/display.html
+++ b/display.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
         crossorigin="anonymous">
         <link rel="stylesheet" href="css/stylesForDisplay.css">
-        <link rel="stylesheet" href="css/displayData.css">
+        <link rel="stylesheet" href="css/display.css">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 </head>
@@ -46,36 +46,21 @@
 <section class="demo">
 
     <dl class="list maki">
-        <dt>Maki</dt>
+        <dt>飲んだお酒</dt>
         <dd>
-            <a href="#">Ana-kyu</a>
+            <a>ビール</a>
         </dd>
         <dd>
-            <a href="#">Chutoro</a>
+            <a>赤ワイン</a>
         </dd>
         <dd>
-            <a href="#">Kaiware</a>
+            <a>日本酒</a>
         </dd>
         <dd>
-            <a href="#">Kampyo</a>
+            <a>レモンサワー</a>
         </dd>
         <dd>
-            <a href="#">Kappa</a>
-        </dd>
-        <dd>
-            <a href="#">Natto</a>
-        </dd>
-        <dd>
-            <a href="#">Negitoro</a>
-        </dd>
-        <dd>
-            <a href="#">Oshinko</a>
-        </dd>
-        <dd>
-            <a href="#">Otoro</a>
-        </dd>
-        <dd>
-            <a href="#">Tekka</a>
+            <a>白ワイン</a>
         </dd>
     </dl>
 
@@ -93,6 +78,6 @@
     </div>
 </div>
 
-<script src="js/displayData.js"></script>
+<script src="js/display.js"></script>
 
 </html>
